jump menu fixed

--- a/Presentation/Nop.Web/Themes/DefaultClean/Content/theater.css
+++ b/Presentation/Nop.Web/Themes/DefaultClean/Content/theater.css
@@ -93,7 +93,7 @@ img  {
 	text-shadow: 0px 0px 6px #000;
 	text-transform: capitalize;
 	float: right;
-	width: 160px;
+	width: 500px;
 	padding-right: 27px;
 	color: #FFF;
 	opacity: 0;
